<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Twitter Log in</string>
    <string name="title_activity_timeline">Home</string>
    <string name="username">\@foo</string>
    <string name="body">This is the tweet body</string>
    <string name="name_label">name</string>
    <string name="timestamp_label">Time Stamp</string>
    <string name="title_activity_tweet">Tweet</string>
    <string name="compost_username_label">\@foo</string>
    <string name="compost_name">name</string>
    <string name="hint_edit_text">What happening?</string>
    <string name="btn_tweet">Tweet</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

</resources>