<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivProfileImageC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserNameC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImageC"
        android:text="@string/compost_username_label" />

    <TextView
        android:id="@+id/tvNameC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserNameC"
        android:layout_below="@+id/tvUserNameC"
        android:text="@string/compost_name" />

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivProfileImageC"
        android:ems="10"
        android:hint="@string/hint_edit_text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNameC"
        android:layout_below="@+id/etTweet"
        android:layout_marginTop="25dp"
        android:onClick="onTweet"
        android:text="@string/btn_tweet" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_marginLeft="54dp"
        android:layout_toRightOf="@+id/btnTweet"
        android:onClick="onCancel"
        android:text="@string/btn_cancel" />

</RelativeLayout>
